# 3d-render-web

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.js
.github/workflows/: ci.yml
rust/: 2x2_training_data.csv  Cargo.toml
rust/learning/: pyraminx.json
rust/src/: bijection.rs  face_map.rs  generate_training_data.rs  lib.rs  neural_network.rs  plane.rs  point_in_space_map.rs  polyhedron.rs  puzzles.rs  quaternion.rs  ray.rs  rotation3d.rs  train.rs  train2.rs  traverse_combinations.rs  twisty_puzzle.rs  vector3d.rs
rust/src/solver/: bijection_trie.rs  full_search_solve.rs  lookahead.rs  metamove_phased_solver.rs  metamove_solver.rs  metamoves.rs  mod.rs  neural_network_one_move.rs  simple_one_move.rs
rust/src/solver/snapshots/: twisty_puzzles__solver__metamoves__tests__discover_metamoves_2x2.snap
rust/training_data/: 2x2.csv  3x3.csv  pyraminx.csv
src/: main.ts  style.css
