[package]
name = "twisty-puzzles"
version = "0.0.0"
authors = ["Caleb Eby <caleb.eby01@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
getrandom = { version = "0.2.6", features = ["js"] }
num = "0.4.0"
rand = "0.8.5"

[dev-dependencies]
insta = "1.15.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlButtonElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
]
